--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.3",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "ws": "^8.11.0"
   }
 }
